--- a/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/Samples/Controls/RadRibbonView/RadRibbonView_Demo.xaml
+++ b/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/Samples/Controls/RadRibbonView/RadRibbonView_Demo.xaml
@@ -5,29 +5,26 @@
     xmlns:local="clr-namespace:OpenSilver.Samples.TelerikUI"
     xmlns:controls="using:Telerik.Windows.Controls">
 
-    <ContentControl Style="{StaticResource Card_Style}" Height="210" Width="180">
+    <ContentControl Style="{StaticResource Card_Style}" Height="210" Width="480">
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <ContentControl Content="Rad Ribbon View" Foreground="#FFF78069" Background="#FFDCA59C" Style="{StaticResource HeaderControl_Style}"/>
-            <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
-                <controls:RadRibbonView x:Name="radRibbonView" Title="My Title" ApplicationName="My Application">
-                    <controls:RadRibbonTab Header="Home">
-                        <controls:RadRibbonGroup Header="Clipboard">
-                        </controls:RadRibbonGroup>
-                        <controls:RadRibbonGroup Header="Font">
-                        </controls:RadRibbonGroup>
-                    </controls:RadRibbonTab>
-                    <controls:RadRibbonTab Header="Edit">
-                        <controls:RadRibbonGroup Header="Test">
-                        </controls:RadRibbonGroup>
-                    </controls:RadRibbonTab>
-                </controls:RadRibbonView>
-            </StackPanel>
-
+            <ContentControl Content="RadRibbonView" Foreground="#FFF78069" Background="#FFDCA59C" Style="{StaticResource HeaderControl_Style}"/>
+            <controls:RadRibbonView x:Name="radRibbonView" CustomLayout="True" Grid.Row="1" Title="My Title" ApplicationName="My Application" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                <controls:RadRibbonTab Header="Home">
+                    <controls:RadRibbonGroup Header="Clipboard">
+                    </controls:RadRibbonGroup>
+                    <controls:RadRibbonGroup Header="Font">
+                    </controls:RadRibbonGroup>
+                </controls:RadRibbonTab>
+                <controls:RadRibbonTab Header="Edit">
+                    <controls:RadRibbonGroup Header="Test">
+                    </controls:RadRibbonGroup>
+                </controls:RadRibbonTab>
+            </controls:RadRibbonView>
             <Button Grid.Row="2" Content="VIEW SOURCE..." Click="ButtonViewSource_Click" Background="#FF6F7DFF" Style="{StaticResource ButtonViewSource_Style}"/>
         </Grid>
     </ContentControl>
