--- a/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/Samples/Controls/RadDocking/RadDocking_Demo.xaml
+++ b/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/Samples/Controls/RadDocking/RadDocking_Demo.xaml
@@ -5,33 +5,28 @@
     xmlns:local="clr-namespace:OpenSilver.Samples.TelerikUI"
     xmlns:controls="using:Telerik.Windows.Controls">
 
-    <ContentControl Style="{StaticResource Card_Style}" Height="210" Width="180">
+    <ContentControl Style="{StaticResource Card_Style}" Height="200" Width="480">
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <ContentControl Content="Rad Docking" Foreground="#FF6F7DFF" Background="#FF9A9FCE" Style="{StaticResource HeaderControl_Style}"/>
-            <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
-                <controls:RadDocking>
-                    <controls:RadDocking Width="300" Height="200">
-                        <controls:RadDocking.DocumentHost>
-                            <controls:RadSplitContainer>
-                                <controls:RadPaneGroup>
-                                    <controls:RadPane Header="Description">
-                                        <TextBlock TextWrapping="Wrap" Text="On the Documents tab above press Ctrl + Mouse Left button to display the Popup Menu. You can use the same combination on every tab."/>
-                                    </controls:RadPane>
-                                    <controls:RadPane Header="NonDraggable" CanFloat="False">
-                                        <TextBlock TextWrapping="Wrap" Text="This pane cannot be dragged, because it has its property CanFloat set 'False'."/>
-                                    </controls:RadPane>
-                                </controls:RadPaneGroup>
-                            </controls:RadSplitContainer>
-                        </controls:RadDocking.DocumentHost>
-                    </controls:RadDocking>
-                </controls:RadDocking>
-            </StackPanel>
-
+            <ContentControl Content="RadDocking" Foreground="#FF6F7DFF" Background="#FF9A9FCE" Style="{StaticResource HeaderControl_Style}"/>
+            <controls:RadDocking Grid.Row="1" Width="420" Height="150" CustomLayout="True" ClipToBounds="True">
+                <controls:RadDocking.DocumentHost>
+                    <controls:RadSplitContainer>
+                        <controls:RadPaneGroup>
+                            <controls:RadPane Header="Description">
+                                <TextBlock TextWrapping="Wrap" Text="On the Documents tab above press Ctrl + Mouse Left button to display the Popup Menu. You can use the same combination on every tab."/>
+                            </controls:RadPane>
+                            <controls:RadPane Header="NonDraggable" CanFloat="False">
+                                <TextBlock TextWrapping="Wrap" Text="This pane cannot be dragged, because it has its property CanFloat set 'False'."/>
+                            </controls:RadPane>
+                        </controls:RadPaneGroup>
+                    </controls:RadSplitContainer>
+                </controls:RadDocking.DocumentHost>
+            </controls:RadDocking>
             <Button Grid.Row="2" Content="VIEW SOURCE..." Click="ButtonViewSource_Click" Background="#FF6F7DFF" Style="{StaticResource ButtonViewSource_Style}"/>
         </Grid>
     </ContentControl>
