--- a/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/Samples/Controls/RadTabControl/RadTabControl_Demo.xaml
+++ b/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/Samples/Controls/RadTabControl/RadTabControl_Demo.xaml
@@ -6,23 +6,20 @@
            xmlns:telerik="http://schemas.telerik.com/2008/xaml/presentation"
     xmlns:local="clr-namespace:OpenSilver.Samples.TelerikUI">
 
-    <ContentControl Style="{StaticResource Card_Style}" Height="210" Width="180">
+    <ContentControl Style="{StaticResource Card_Style}" Height="150" Width="220">
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <ContentControl Content="Rad Tab Control" Foreground="#FFF78069" Background="#FFDCA59C" Style="{StaticResource HeaderControl_Style}"/>
-            <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
-                <controls:RadTabControl telerik:StyleManager.Theme="Windows8">
-                    <controls:RadTabControl.Items>
-                        <controls:RadTabItem Header="Tab 1" Content="Item 1" Width="30" Height="18"/>
-                        <controls:RadTabItem Header="Tab 2" Content="Item 2" Width="30" Height="18"/>
-                    </controls:RadTabControl.Items>
-                </controls:RadTabControl>
-            </StackPanel>
-
+            <ContentControl Content="RadTabControl" Foreground="#FFF78069" Background="#FFDCA59C" Style="{StaticResource HeaderControl_Style}"/>
+            <controls:RadTabControl CustomLayout="True" Grid.Row="1" telerik:StyleManager.Theme="Windows8">
+                <controls:RadTabControl.Items>
+                    <controls:RadTabItem Header="Tab 1" Content="Item 1" />
+                    <controls:RadTabItem Header="Tab 2" Content="Item 2" />
+                </controls:RadTabControl.Items>
+            </controls:RadTabControl>
             <Button Grid.Row="2" Content="VIEW SOURCE..." Click="ButtonViewSource_Click" Background="#FF6F7DFF" Style="{StaticResource ButtonViewSource_Style}"/>
         </Grid>
     </ContentControl>
