Add link to the source code of the Telerik demo application.

--- a/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/Samples/Welcome.xaml
+++ b/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/Samples/Welcome.xaml
@@ -11,7 +11,14 @@
         <StackPanel Margin="0,0,20,20">
             <TextBlock Text="Welcome!" Foreground="#FF2299A1" Style="{StaticResource PageHeader_Style}"/>
             <TextBlock x:Name="IntroductionTextBlock" Text="This app demonstrates the current state of the 'Telerik UI for Silverlight' source code recompiled with OpenSilver, so that it can run on modern browsers without plugins, where Silveright is not supported. It also provides sample code to show how to use those Telerik UI controls in an OpenSilver application." FontSize="16" Foreground="#FF333333" TextWrapping="Wrap" Margin="22,10,0,0"/>
-            <TextBlock Text="To use these controls in your own OpenSilver application, you need:" FontSize="16" Foreground="#FF333333" TextWrapping="Wrap" Margin="22,10,0,0"/>
+            <TextBlock FontSize="16" Foreground="#FF333333" TextWrapping="Wrap" Margin="22,10,0,0">
+              <Span xml:space="preserve"><Run>The source code of this demo application is available at: </Run>
+                     <Hyperlink FontSize="16" Foreground="Blue" NavigateUri="https://github.com/OpenSilver/OpenSilver.Samples.TelerikUI" Cursor="Hand">
+                         https://github.com/OpenSilver/OpenSilver.Samples.TelerikUI
+                     </Hyperlink>
+              </Span>
+            </TextBlock>
+            <TextBlock Text="To use the Telerik controls in your own OpenSilver application, you need:" FontSize="16" Foreground="#FF333333" TextWrapping="Wrap" Margin="22,10,0,0"/>
 
             <TextBlock FontSize="16" Foreground="#FF333333" TextWrapping="Wrap" Margin="22,10,0,0">
                     <Span xml:space="preserve"><Run>1. A valid license from Telerik for 'Telerik UI for Silverlight', which is available at: </Run>
