Edit RadTreeListView Columns

--- a/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/Samples/Controls/RadTreeListView/RadTreeListView_Demo.xaml
+++ b/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/Samples/Controls/RadTreeListView/RadTreeListView_Demo.xaml
@@ -5,7 +5,7 @@
     xmlns:controls="using:Telerik.Windows.Controls"
     xmlns:local="clr-namespace:OpenSilver.Samples.TelerikUI">
 
-    <ContentControl Style="{StaticResource Card_Style}" Height="310" Width="730">
+    <ContentControl Style="{StaticResource Card_Style}" Height="310" Width="400">
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
@@ -13,7 +13,15 @@
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
             <ContentControl Content="RadTreeListView" Foreground="#FFD59851" Background="#FFBFA383" Style="{StaticResource HeaderControl_Style}"/>
-            <controls:RadTreeListView x:Name="radTreeListView" CustomLayout="True" Grid.Row="1" ItemsSource="{Binding WarehouseItems}" Width="680" Height="270"/>
+            <controls:RadTreeListView x:Name="radTreeListView" CustomLayout="True" Grid.Row="1" AutoGenerateColumns="False" ItemsSource="{Binding WarehouseItems}" Width="380" Height="270">
+                <controls:RadTreeListView.ChildTableDefinitions>
+                    <controls:TreeListViewTableDefinition ItemsSource="{Binding Items}" />
+                </controls:RadTreeListView.ChildTableDefinitions>
+                <controls:RadTreeListView.Columns>
+                    <controls:GridViewDataColumn DataMemberBinding="{Binding Name}" Header="Name" />
+                    <controls:GridViewDataColumn DataMemberBinding="{Binding Count}" Header="Count" />
+                </controls:RadTreeListView.Columns>
+            </controls:RadTreeListView>
             <Button Grid.Row="2" Content="VIEW SOURCE..." Click="ButtonViewSource_Click" Background="#FF6F7DFF" Style="{StaticResource ButtonViewSource_Style}"/>
         </Grid>
     </ContentControl>
